test/src/e2e_vm_tests/test_programs/should_fail/type_alias_unknown_type/src/main.sw
script;

type MyType = UnknownType;

fn main(x: MyType) {}
